Improoving swagger documentation
