# lib/rocketpay_web/swagger/account.ex
@@ -1,5 +1,4 @@
 defmodule RocketpayWeb.Swagger.Account do
-
   defmacro __using__(_) do
     quote do
       use PhoenixSwagger
@@ -19,10 +18,72 @@ defmodule RocketpayWeb.Swagger.Account do
         description("Essa é uma descrição do endpoint")
 
         parameters do
-          body(:body, Schema.ref(:Operation), "Parâmetros para realização da operação", required: true)
+          id(:path, :string, "Account id", required: true)
+          body(:body, Schema.ref(:OperationRequest), "Parâmetros para realização da operação",
+            required: true
+          )
         end
 
-        response(201, "Created", Schema.ref(:Operation))
+        response(200, "Ok", Schema.ref(:OperationResponse))
+
+        response(400, "Bad request", Schema.ref(:OperationErrorResponse))
+
+        response(401, "Unauthorized")
+
+        response(500, "Internal server error")
+      end
+
+      swagger_path(:withdraw) do
+        tag("Accounts")
+
+        summary("Operação de saque de uma conta")
+
+        post("/api/accounts/{id}/withdraw")
+        produces("application/json")
+        consumes("application/json")
+
+        description("Essa é uma descrição do endpoint")
+
+        parameters do
+          id(:path, :string, "Account id", required: true)
+          body(:body, Schema.ref(:OperationRequest), "Parâmetros para realização da operação",
+            required: true
+          )
+        end
+
+        response(200, "Ok", Schema.ref(:OperationResponse))
+
+        response(400, "Bad request", Schema.ref(:OperationErrorResponse))
+
+        response(401, "Unauthorized")
+
+        response(500, "Internal server error")
+      end
+
+      swagger_path(:transaction) do
+        tag("Accounts")
+
+        summary("Operação de transferência de uma conta para outra")
+
+        post("/api/accounts/transaction")
+        produces("application/json")
+        consumes("application/json")
+
+        description("Essa é uma descrição do endpoint")
+
+        parameters do
+          body(:body, Schema.ref(:TransactionRequest), "Parâmetros para realização da transferência",
+            required: true
+          )
+        end
+
+        response(200, "Ok", Schema.ref(:TransactionResponse))
+
+        response(400, "Bad request", Schema.ref(:OperationErrorResponse))
+
+        response(401, "Unauthorized")
+
+        response(500, "Internal server error")
       end
     end
   end
